--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,42 @@
 {
   "env": {
     "development": {
-      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+      "presets": [
+        [
+          "next/babel",
+          {
+            "styled-jsx": {
+              "plugins": ["styled-jsx-plugin-postcss"]
+            }
+          }
+        ],
+        "@zeit/next-typescript/babel"
+      ]
     },
     "production": {
-      "presets": ["next/babel", "@zeit/next-typescript/babel"]
+      "presets": [
+        [
+          "next/babel",
+          {
+            "styled-jsx": {
+              "plugins": ["styled-jsx-plugin-postcss"]
+            }
+          }
+        ],
+        "@zeit/next-typescript/babel"
+      ]
     },
     "test": {
       "presets": [
-        ["next/babel", { "preset-env": { "modules": "commonjs" } }],
+        [
+          "next/babel",
+          {
+            "preset-env": { "modules": "commonjs" },
+            "styled-jsx": {
+              "plugins": ["styled-jsx-plugin-postcss"]
+            }
+          }
+        ],
         "@zeit/next-typescript/babel"
       ]
     }
