--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "babel-loader": "^7.1.4",
     "dotenv-webpack": "1.5.7",
     "express": "^4.14.0",
+    "lost": "^8.3.0",
     "next": "^7.0.2",
+    "postcss-nested": "^4.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "styled-jsx-plugin-postcss": "^2.0.0",
     "typescript": "^3.1.6",
     "typescript-babel-jest": "^1.0.5"
   },
@@ -26,6 +29,7 @@
     "@types/next": "^7.0.5",
     "@types/react": "^16.0.41",
     "@types/react-dom": "^16.0.4",
+    "@types/styled-jsx": "^2.2.7",
     "@zeit/next-sass": "^1.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -35,5 +39,11 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
     "ts-node": "^7.0.1"
+  },
+  "postcss": {
+    "plugins": {
+      "lost": {},
+      "postcss-nested": {}
+    }
   }
 }
