--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "dev": "nodemon server/index.ts",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node .next/production-server/index.js",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-rc.1",
+    "@babel/core": "^7.0.0-bridge.0",
     "@zeit/next-typescript": "1.1.1",
     "babel-loader": "^7.1.4",
     "dotenv-webpack": "1.5.7",
@@ -19,8 +21,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "styled-jsx-plugin-postcss": "^2.0.0",
-    "typescript": "^3.1.6",
-    "typescript-babel-jest": "^1.0.5"
+    "styled-jsx-plugin-sass": "^1.0.0",
+    "typescript": "^3.1.6"
   },
   "devDependencies": {
     "@types/enzyme": "^3.1.15",
@@ -38,7 +40,9 @@
     "nodemon": "^1.18.6",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
-    "ts-node": "^7.0.1"
+    "ts-jest": "^23.10.4",
+    "ts-node": "^7.0.1",
+    "typescript-babel-jest": "^1.0.5"
   },
   "postcss": {
     "plugins": {
