--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dev": "nodemon server/index.ts",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node .next/production-server/index.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "jest --watch",
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
@@ -18,6 +17,7 @@
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "styled-components": "^4.1.1",
     "typescript": "^3.1.6"
   },
   "devDependencies": {
@@ -27,11 +27,11 @@
     "@types/next": "^7.0.5",
     "@types/react": "^16.0.41",
     "@types/react-dom": "^16.0.4",
-    "@zeit/next-sass": "^1.0.1",
+    "@types/styled-components": "^4.1.1",
+    "babel-plugin-styled-components": "^1.9.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^23.1.0",
-    "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
