--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "babel-plugin-styled-components": "^1.9.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "jest": "^23.1.0",
+    "jest-styled-components": "^6.3.1",
     "nodemon": "^1.18.6",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
