--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.4",
     "dotenv-webpack": "1.5.7",
     "express": "^4.14.0",
+    "lru-cache": "^5.1.1",
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
