--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "custom-server-express",
-  "version": "1.0.0",
+  "name": "next-ts",
+  "version": "$(cat version.num)",
   "scripts": {
     "dev": "nodemon server/index.ts",
     "build": "next build && tsc --project tsconfig.server.json",
     "start": "NODE_ENV=production node .next/production-server/index.js",
+    "docker": "yarn build && semver -i $(cat version.num) > version.num && docker build -t $npm_package_config_registry:$(cat version.num) . && docker push $npm_package_config_registry:$(cat version.num)",
     "test": "jest --watch",
     "test:coverage": "jest --coverage"
+  },
+  "config": {
+    "registry": "iudinfd/next-ts"
   },
   "dependencies": {
     "@babel/core": "^7.0.0-bridge.0",
@@ -38,6 +42,7 @@
     "nodemon": "^1.18.6",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.2.0",
+    "semver": "^5.6.0",
     "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "typescript-babel-jest": "^1.0.5"
