--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,8 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "Static/*": ["./static/*"],
-      "Components/*": ["./src/components/*"]
+      "Components/*": ["./src/components/*"],
+      "Utils/*": ["./src/utils/*"]
     },
     "typeRoots": ["./node_modules/@types"],
     "lib": ["dom", "es2015", "es2016"]
