--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
   "dependencies": {
     "@babel/core": "^7.0.0-bridge.0",
     "@zeit/next-typescript": "1.1.1",
+    "axios": "^0.18.0",
     "babel-loader": "^7.1.4",
     "dotenv-webpack": "1.5.7",
     "express": "^4.14.0",
     "lru-cache": "^5.1.1",
     "next": "^7.0.2",
+    "next-redux-wrapper": "^2.0.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.7",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.1",
     "typescript": "^3.1.6"
   },
@@ -30,8 +36,10 @@
     "@types/express": "^4.16.0",
     "@types/jest": "^23.0.0",
     "@types/next": "^7.0.5",
+    "@types/next-redux-wrapper": "^2.0.0",
     "@types/react": "^16.0.41",
     "@types/react-dom": "^16.0.4",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^4.1.1",
     "babel-plugin-styled-components": "^1.9.0",
     "enzyme": "^3.3.0",
