Дополнить переменные окружения, константы и описания

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 PORT=3000
 SSR_CACHE_MAX=100
 SSR_CACHE_MAX_AGE=60000
+BUILD_TYPE=dev
+HTTPS=true
+INITIAL_PATH=/kari-next/
+SITE_TITLE='«Kari» - интернет-магазин обуви и аксессуаров'
 TEST_VAR=Environment variables work fine!
